# vptree

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py  vptree.hpp
python/: CMakeLists.txt  pyvptree.cpp
test/: CMakeLists.txt  test_pyvptree.py  test_vptree.cpp
